tests/snapshots/examples_fixtures/patterns__list_patterns.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/list_patterns.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected IDENT, got data.

  --> examples/patterns/list_patterns.flx:57:5
   |
57 | let data = [10 | [20 | [30 | None]]];
   |     ^^^^


--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found data.

  --> examples/patterns/list_patterns.flx:59:7
   |
59 | match data {
   |       ^^^^

Found 2 errors.
== stdout ==
<not executed>
